--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <context.name>/netletav/</context.name>
+        <skipNg>false</skipNg>
     </properties>
     
     <dependencies>
@@ -59,6 +61,132 @@
 
     <build>
         <plugins>
+            
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <id>exec-npm-install</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <skip>${skipNg}</skip>
+                            <executable>npm</executable>
+                            <workingDirectory>${project.basedir}/src/main/client</workingDirectory>  
+                            <arguments>
+                                <argument>run</argument>
+                                <argument>build</argument>
+                            </arguments>
+                        </configuration>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+      
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.basedir}/src/main/webapp</directory>
+                            <includes>
+                                <include>assets/*/**</include>
+                                <include>*.*</include>
+                            </includes>
+                            <excludes>
+                                <exclude>.gitignore</exclude>
+                                <exclude>index.jsp</exclude>
+                            </excludes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+      
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+          
+                    <execution>
+                        <id>copy-frontend-resources</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}/src/main/webapp</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/client/dist/netlet-analysis/browser</directory>
+                                    <includes>
+                                        <include>*/**</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+          
+                </executions>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+    
+            <!-- Insert jsp pageEncoding tag to index.html -->
+            <plugin> 
+                <groupId>com.google.code.maven-replacer-plugin</groupId> 
+                <artifactId>replacer</artifactId> 
+                <version>1.5.3</version> 
+                <executions> 
+                    <execution> 
+                        <id>replace-for-index</id>
+                        <phase>prepare-package</phase> 
+                        <goals> 
+                            <goal>replace</goal> 
+                        </goals>  
+                        <configuration> 
+                            <file>${project.basedir}/src/main/webapp/index.html</file> 
+                            <replacements> 
+                                <!--                <replacement> 
+                                  <token>&lt;!doctype html&gt;</token> 
+                                  <value>&lt;%@page contentType="text/html" pageEncoding="UTF-8"%&gt;&lt;!doctype html&gt;</value> 
+                                </replacement>
+                                <replacement> 
+                                  <token>base href="/"</token> 
+                                  <value>base href="${context.name}"</value> 
+                                </replacement> -->
+                            </replacements> 
+                        </configuration> 
+                    </execution> 
+	  
+                    <execution> 
+                        <id>replace-for-config</id>
+                        <phase>prepare-package</phase> 
+                        <goals> 
+                            <goal>replace</goal> 
+                        </goals>  
+                        <configuration> 
+                            <file>${project.basedir}/src/main/webapp/assets/config.json</file> 
+                            <replacements> 
+                                <replacement> 
+                                    <token>"context": "/",</token> 
+                                    <value>"context": "${context.name}",</value> 
+                                </replacement> 
+                            </replacements> 
+                        </configuration> 
+                    </execution> 
+          
+                </executions>
+            </plugin>
+      
+      
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
