--- a/src/main/client/angular.json
+++ b/src/main/client/angular.json
@@ -17,6 +17,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "leaflet",
+              "@elfalem/leaflet-curve"
+            ],
             "outputPath": "dist/netlet-analysis",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -51,7 +55,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
