--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>StaticServlet</servlet-name>
+        <url-pattern>/identities</url-pattern>
         <url-pattern>/keywords</url-pattern>
         <url-pattern>/map</url-pattern>
         <url-pattern>/home</url-pattern>
