--- a/src/main/client/package.json
+++ b/src/main/client/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "@bluehalo/ngx-leaflet": "^19.0.0",
     "@elfalem/leaflet-curve": "^0.9.2",
+    "@joakimono/echarts-extension-leaflet": "^1.0.3",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "echarts": "^5.6.0",
