--- a/src/main/client/src/assets/config.json
+++ b/src/main/client/src/assets/config.json
@@ -1,3 +1,19 @@
 {
-    
+    "tenants_identities": {
+        "pamatky": ["Wirth, Zdeněk"],
+        "tgm": ["Masaryk, Tomáš Garrigue"],
+        "blekastad": ["Blekastad, Milada"],
+        "musil": ["Musil, Alois"],
+        "kalivoda": ["Kalivoda, Robert"],
+        "brezina": ["Březina, Otokar"],
+        "deml": ["Deml, Jakub"],
+        "komensky": ["Komenský, Jan Amos"],
+        "polanus": ["Polanus, Amandus"],
+        "studenti": [],
+        "ucenci": [],
+        "sachs": ["Sachs von Löwenheim, Philipp Jakob"],
+        "neumann": ["Neumann, Jaromír"],
+        "patocka": [],
+        "marci": ["Marci, Johannes Marcus"]
+    }
 }
