--- a/src/main/resources/cz/knav/netlet/netlet/analysis/visualization/server_config.json
+++ b/src/main/resources/cz/knav/netlet/netlet/analysis/visualization/server_config.json
@@ -1,68 +1,22 @@
 {
-    "python_exe": "C:\\Users\\alberto\\AppData\\Local\\Programs\\Python\\Python311\\python.exe", 
-    "python_script": "c:\\Users\\alberto\\Projects\\NETLET\\pero-ocr-0.6.1\\user_scripts\\pero-ocr.py",
-    "data_dir": "c:\\Users\\alberto\\Projects\\NETLET\\data",
-    "images_dir": "images",
-    "alto_dir": "alto",
-    "txt_dir": "txt",
-    
-    "PERO": {
-        "server_url": "https://pero-ocr.fit.vutbr.cz/api/",
-        "api_key": ""
-    },
-
-    "sources_dir": "c:\\Users\\alberto\\Projects\\NETLET\\sources",
-    "geo_dir": "c:\\Users\\alberto\\Projects\\NETLET\\geo",
-
-    "maxPixels": 20000000,
-    "maxMedium": 1200,
-
     "solr": "http://localhost:8983/solr",
-    "dbKeywordTables": ["keywords", "professions"],
-    "nametagUrl": "http://lindat.mff.cuni.cz/services/nametag/api/",
-    "translationUrl": "https://lindat.mff.cuni.cz/services/translation/api/v2/languages/",
-    "gptModels": ["gpt-3.5-turbo", "gpt-4o", "gpt-4.1"],
-    "annotator": {
-        "model": "gpt-3.5-turbo",
-        "response_format": { "type": "json_object" },
-        "messages": [],
-        "temperature": 0,
-        "max_tokens": 4048,
-        "top_p": 0,
-        "frequency_penalty": 0,
-        "presence_penalty": 0
-    },
-    "chatGPTMessages" :[
-            {
-                "role": "system",
-                "content": "You are an librarian assistent. You receive a text which is a historical letter. Reply in Czech."
-            },
-            {
-                "role": "system",
-                "content": "Oslovení je na začátku dopisu. Incipit a explicit musi byt v originalnim jazyku. Definice incipitu – první věta či větný celek textu dokumentu, bez úvodního pozdravu a oslovení, cca. 10 slov. Definice explicitu – poslední věta či větný celek textu dokumentu, pred rozloučením, bez závěrečného pozdravu a podpisu, cca. 10 slov"
-            }, 
-            {
-                "role": "system",
-                "content": "Datum musi byt v ISO format. Salutation is at the letter begining. The JSON format definition is { salutation: string, letter_number: string, letter_title: string, page_number: number, end_page_number: number, abstract_cs: string, abstract_en: string, sender: string, recipient: string, date_as_show_in_text: string, date: Date, location: string, incipit: string, explicit: string, sign_off: string, signature: string, summary: text }"
-            }, 
-            {
-                "role": "user",
-                "content": ""
-            }
-        ],
-    "openAIKey" :"",
-    "chatGPT": {
-       "max_tokens":  7000
-    },
-    "defaultPrompt": "Jsi pomocník, který dostane korespondenci (dopis) ###NAME###. Napis abstrakt v češtině v {words/100} větách.",
-    "file_config" : {
-        "name": "",
-        "columns": 1,
-        "def_author": "",
-        "def_recipient": "",
-        "replacements": [],
-        "searchParams": {},
-        "ignored": {},
-        "prompt": ""
-      }
+    "hiko_api": "https://{tenant}.historicka-korespondence.cz/api/v2",
+    "hiko_api_bearer": "Bearer 5|jx7gYoWVA6D2Vgot5cX4xN1LxeOdKdtHiomOdr4B10b9a7f1", 
+    "test_mappings": {
+            "brezina": "hiko-test",
+            "deml": "hiko-test2",
+            "blekastad": "hiko-test3",
+            "kalivoda": "hiko-test4",
+            "komensky": "hiko-test5",
+            "marci": "hiko-test6",
+            "musil": "hiko-test7",
+            "neumann": "hiko-test8",
+            "pamatky": "hiko-test9",
+            "patocka": "hiko-test10",
+            "polanus": "hiko-test11",
+            "sachs": "hiko-test12",
+            "studenti": "hiko-test13",
+            "tgm": "hiko-test14",
+            "ucenci": "hiko-test15"
+        }
 }
