--- a/src/main/client/src/assets/config.json
+++ b/src/main/client/src/assets/config.json
@@ -44,5 +44,25 @@
         "author": "rgb(6, 120, 0)",
         "recipient": "rgb(255,160, 10)",
         "mentioned": "rgb(152, 156, 223)"
-    }
+    },
+
+  "hikoUrl": "https://{tenant}.historicka-korespondence.cz/letters/{id}/edit",
+  "isTest": true,
+  "test_mappings": {
+    "brezina": "hiko-test",
+    "deml": "hiko-test2",
+    "blekastad": "hiko-test3",
+    "kalivoda": "hiko-test4",
+    "komensky": "hiko-test5",
+    "marci": "hiko-test6",
+    "musil": "hiko-test7",
+    "neumann": "hiko-test8",
+    "pamatky": "hiko-test9",
+    "patocka": "hiko-test10",
+    "polanus": "hiko-test11",
+    "sachs": "hiko-test12",
+    "studenti": "hiko-test13",
+    "tgm": "hiko-test14",
+    "ucenci": "hiko-test15"
+  }
 }
