--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,7 @@
         <url-pattern>/keywords</url-pattern>
         <url-pattern>/identities</url-pattern>
         <url-pattern>/professions</url-pattern>
+        <url-pattern>/timeline</url-pattern>
         <url-pattern>/map</url-pattern>
         <url-pattern>/home</url-pattern>
     </servlet-mapping>
