Change info letters to table

--- a/src/main/client/src/assets/config.json
+++ b/src/main/client/src/assets/config.json
@@ -64,7 +64,7 @@
   },
 
   "hikoUrl": "https://{tenant}.historicka-korespondence.cz/letters/{id}/edit",
-  "isTest": true,
+  "isTest": false,
   "test_mappings": {
     "brezina": "hiko-test",
     "deml": "hiko-test2",
